# serializer version: 1
# name: test_binary_sensors[binary_sensor.zona_01-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_01',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  01',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_01-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  01',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_01',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_02e-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_02e',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  02e',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_02e-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  02e',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_02e',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_03a-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_03a',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  03a',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_03a-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  03a',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_03a',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_04-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_04',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  04',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-3',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_04-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  04',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_04',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_05-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_05',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  05',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-4',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_05-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  05',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_05',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_06-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_06',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  06',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-5',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_06-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  06',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_06',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_07-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_07',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  07',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-6',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_07-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  07',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_07',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_08-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.zona_08',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'ZONA  08',
    'platform': 'elmax',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13762559c53cd093171-zona-7',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.zona_08-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'door',
      'friendly_name': 'ZONA  08',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.zona_08',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
